--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1U5x95upht72pQ_WzHctPkNTix65mHAXB/view">
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Redirecting…</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Meta refresh for no-JS browsers -->
+  <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1U5x95upht72pQ_WzHctPkNTix65mHAXB/view" />
+  <meta name="robots" content="noindex" />
+  <link rel="canonical" href="https://drive.google.com/file/d/1U5x95upht72pQ_WzHctPkNTix65mHAXB/view" />
+  <script>
+    // JS redirect (faster)
+    window.location.replace("https://drive.google.com/file/d/1U5x95upht72pQ_WzHctPkNTix65mHAXB/view");
+  </script>
+  <style>
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 40px; }
+    a { text-decoration: none; }
+  </style>
+</head>
+<body>
+  Redirecting to portfolio… If not redirected, <a href="https://drive.google.com/file/d/1U5x95upht72pQ_WzHctPkNTix65mHAXB/view" rel="noopener">click here</a>.
+</body>
+</html>
